# Atelier-tests-unitaires

./: .gitignore  CMakeLists.txt  README.md
3A/: ChaineVideException.h  EmptyStringException.h  ManipulateurDeChaines.cpp  ManipulateurDeChaines.h  ManipulateurDeChainesTest.cpp  StringManipulator.cpp  StringManipulator.h  StringManipulatorTest.cpp
FIRST/: ConfigReader.cpp  LecteurDeConfigurations.cpp  PanierAchat.cpp  PanierAchat.h  PanierAchatTest.cpp  ShoppingCart.cpp  ShoppingCart.h  ShoppingCartTest.cpp
NommageTests/: Calculateur.cpp  Calculateur.h  CalculateurTest.cpp  Calculator.cpp  Calculator.h  CalculatorTest.cpp
